ros2_ws/log/build_2020-10-15_02-02-55/py_pubsub/stderr.log
  File "/home/shorouk/ros2_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/test.py", line 3
    echo $z
         ^
SyntaxError: invalid syntax

  File "/home/shorouk/ros2_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/imagenode1.py", line 222
    def imageProcessing(image)
                             ^
SyntaxError: invalid syntax

